# osrs-npc-scraper

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/osrs_npc_scraper/: config.py  exceptions.py
src/osrs_npc_scraper/scraper/: __init__.py  crawler.py  fetcher.py
tests/: conftest.py
tests/fixtures/: category_page_example.html
tests/scraper/: test_crawler.py  test_fetcher.py
