[project]
name = "osrs-npc-scraper"
version = "0.1.0"
description = "Tool to scrape OSRS Wiki NPC pages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.18",
]
